Changed title and tagline
These tutorial things never end, huh?

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>32bitstew.GitHub.io</h1>
-            <h2>Github Pages</h2>
+            <h1>32BitStew GitSoup</h1>
+            <h2>Just a little collection of stuff I'm working on.</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
