Okay that tab title was annoying me

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>32bitstew.GitHub.io by 32BitStew</title>
+    <title>32Bit's Soup</title>
   </head>
 
   <body>
