--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="normalize.css" />
 		<style>
 			body {
-				background-color: #FFD8D8;
+				background-color: #deec98;
+				margin-left:20px;
+				margin-top:20px;
 			}
 			#header {
 				position:relative;
@@ -103,41 +105,16 @@
 				width:100%;
 			}
 
-			a {
-  				color: black;
-  				text-decoration: none; /* no underline */
-			}
-
 		</style>
 	</head>
 
 	<body>
-		<div id = "header">
-			<a href="about.html">
-			<div class = "folder" id="folder1" style = "z-index:10">
-				<hr>
-				<span class="label">ABOUT</span>
-			</div>
-			</a>
-			<div class = "folder" id="folder2" style = "z-index:8">
-				<div class= "bigfolder" id ="folder2"> </div>
-				<div class= "mousearea">
-					<hr>
-					<span class="label">a broken tab</span>
-				</div>
-			</div>
-			<div class = "folder" id="folder3" style = "z-index:6">
-				<hr>
-				<span class="label">a broken tab</span>
-			</div>
-			<div class = "folder" id="folder4" style = "z-index:4">
-				<hr>
-				<span class="label">PROJECTS</span>
-			</div>
-			<div class = "folder" id="folder5" style = "z-index:2">
-				<hr>
-				<span class="label">a broken tab</span>
-			</div>
-		</div>
+		<img src="drama.png" />
+		<h1>This is where the about page is going to be!</h1>
+		<h2>Sorry I don't have copy figured out yet; this is taking a while.</h2>
+		<h2>Hand-coding a website in HTML/CSS/JS sure is difficult.</h2>
+		<h3>Anyway, until I find time to write something new, my Handshake bio should suffice:</h3>
+		<p>Hey there! I'm a diligent busybody with over a decade of theater experience and quite a bit of writing experience. With those at my core, I find a lot of enjoyment in teaching and in arranging curriculums. The subject doesn't matter so long as I can spin it in a structured and enthusiastic way.</p>
+		<p>I'm also a card carrying film major following a love passed down from my family. My interest lies mostly in theory, although screenwriting also catches my fancy. Truth be told, I know my fair share of math and programming, too. Mostly that takes shape in private projects, although a few public endeavors can be seen here on my profile.</p>
 	</body>
 </html>
