i hope this works

--- a/index.html
+++ b/index.html
@@ -130,10 +130,12 @@
 				<hr>
 				<span class="label">a broken tab</span>
 			</div>
-			<div class = "folder" id="folder4" style = "z-index:4">
-				<hr>
-				<span class="label">PROJECTS</span>
-			</div>
+			<a href="projects.html">
+				<div class = "folder" id="folder4" style = "z-index:4">
+					<hr>
+					<span class="label">PROJECTS</span>
+				</div>
+			</a>
 			<div class = "folder" id="folder5" style = "z-index:2">
 				<hr>
 				<span class="label">a broken tab</span>
