--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 			} */
 
 			#folder1 {
-				background-color: #deec98;
+				background-color: #b6bf86;
 				box-shadow: 0px 1vh 2px 2px #bcca96;
 			}
 
